--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
 
   <!-- Нижний блок: слово директора и два описания ДОБАВИТЬ ФОТО-->
   <div class="bottom-section">
-    <div class="director-block">
+    <div class="director-block dir1">
       <div class="director-image">
         <img src="assets/img/dir.png" alt="директор Виктор Парекко">
       </div>
@@ -545,6 +545,19 @@
     <div class="info-block">
       <div class="divider"></div>
       <h3> В нашей работе мы ориентированы на инновации и высокое качество, что позволяет нам обеспечивать надёжность и долговечность наших материалов для самых ответственных проектов.   </h3>
+    </div>
+    <div class="director-block dir2">
+      <div class="director-image">
+        <img src="assets/img/dir.png" alt="директор Виктор Парекко">
+      </div>
+      <div class="director-info">
+        <h3>Генеральный директор Интаго Казахстан</h3>
+        <p>Асылбеков Азамат Бисалыулы</p>
+        <!-- <div class="watch-link">
+          <img src="https://static.tildacdn.com/tild6265-3432-4533-a231-306531356334/CaretLeft_4.svg" alt="">
+          <h3><a href="" role="button" aria-haspopup="dialog">Смотреть</a></h3>
+        </div> -->
+      </div>
     </div>
   </div>
 </section>
@@ -945,7 +958,7 @@
       
       <!-- Проект 2 -->
       <div class="geo-sm-project-card">
-        <div class="geo-sm-project-image" style="background-image: url('assets/img/projects/2.jpeg"></div>
+        <div class="geo-sm-project-image" style="background-image: url('assets/img/projects/2.jpg"></div>
         <div class="geo-sm-project-details">
           <h3 class="geo-sm-project-company">Капитальный ремонт автомобильной дороги «Подъезд к с. Тайсоган»</h3>
           <p class="geo-sm-project-location">📍 Место: Казахстан, подъездная автодорога к с. Тайсоган </p>
@@ -965,7 +978,7 @@
       
       <!-- Проект 4 -->
       <div class="geo-sm-project-card">
-        <div class="geo-sm-project-image" style="background-image: url('assets/img/projects/4.jpeg')"></div>
+        <div class="geo-sm-project-image" style="background-image: url('assets/img/projects/6.jpg')"></div>
         <div class="geo-sm-project-details">
           <h3 class="geo-sm-project-company">Реконструкция автомобильной дороги Актау-Форт-Шевченко</h3>
           <p class="geo-sm-project-location">📍 Место: Казахстан, автодорога Актау-Форт-Шевченко</p>
@@ -973,6 +986,15 @@
         </div>
       </div>
 
+      <!-- Проект 5 -->
+      <div class="geo-sm-project-card">
+        <div class="geo-sm-project-image" style="background-image: url('assets/img/projects/5.jpg')"></div>
+        <div class="geo-sm-project-details">
+          <h3 class="geo-sm-project-company">Реконструкция автомобильной дороги республиканского значения Атырау – граница РФ (на Астрахань)</h3>
+          <p class="geo-sm-project-location">📍 Место: Казахстан, автодорога Атырау – граница РФ (на Астрахань)</p>
+          <p class="geo-sm-project-product">Поставка материалов: Геотекстиль нетканый Интатекс 300 – 256 256 м²</p>
+        </div>
+      </div>
     </div>
   </div>
 </section>
